<resources>
    <string name="app_name">Open diary</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Логин</string>
    <string name="LoginButtonText">Войти</string>
    <string name="password">Пароль</string>
    <string name="copyright_bottom_text">Vladik</string>
    <string name="forgot_login_text">Забыли логин или пароль?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetings">"Здравствуйте, "</string>
    <string name="recent_marks">Ваши недавние оценки</string>
    <string name="error">Ошибка</string>
    <string name="error_dialog_message">"Произошла ошибка при работе приложения. Отправьте это сообщение разработчику: "</string>
    <string name="ok">OK</string>
    <string name="teacher">Учитель:</string>
    <string name="theme">Тема:</string>
    <string name="marks">Оценки за урок:</string>
    <string name="hometask">Домашнее задание</string>
    <string name="no_theme">Не указана</string>
    <string name="no_marks">Отсутствуют</string>
    <string name="pick_date">Выбрать дату</string>
    <string name="no_lesson">Нет урока</string>
    <string name="schedule">Расписание</string>
    <string name="main_page">Гланая</string>
    <string name="diary">Open diary</string>
    <string name="continue_to_test">Продолжить как тестовый пользователь</string>
    <string name="test_mode">TestMode</string>


    <string-array name="days_of_week_short">
        <item>Пн.</item>
        <item>Вт.</item>
        <item>Ср.</item>
        <item>Чт.</item>
        <item>Пт.</item>
        <item>Сб.</item>
        <item>Вс.</item>
    </string-array>
</resources>