<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StarterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/logo_layout"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_layout"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_text_layout"
            android:layout_width="match_parent"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#CFCFCF"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_text"
                android:layout_width="match_parent"
                android:paddingVertical="17dp"
                android:layout_height="wrap_content"
                android:hint="@string/login" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_text_layout"
            android:orientation="horizontal"
            app:boxStrokeColor="#CFCFCF"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:paddingBottom="0dp"
            android:layout_marginHorizontal="10dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="17dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_text_layout"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="12dp"
            android:height="50dp"
            android:text="@string/LoginButtonText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_test"
            android:layout_width="match_parent"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_marginHorizontal="10dp"
            android:text="@string/continue_to_test" />

    </RelativeLayout>

    <TextView
        android:id="@+id/author_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/copyright_bottom_text" />

</RelativeLayout>